# Fractals

./: .gitignore.txt  CMakeLists.txt  README.md
cmake/: fractalsConfigure.h.in
include/: fractal.h  fractals.hpp  image.h  julia.hpp  mandelbrot.hpp  mandelbrot_set.h  misc.h  sequence.h
include/gui/app/: app.hpp  notifications.hpp  win_fractal_processing.hpp  window_base.hpp
include/gui/utils/: help_marker.hpp  padding.hpp
mains/: CMakeLists.txt  gui.cpp  main.cpp
scripts/: build_debug.sh  build_release.sh  build_solution.sh  configure.sh  configure_n_build_debug.sh  configure_n_build_release.sh
src/: CMakeLists.txt  fractal.cpp  fractals.cpp  image.cpp  julia.cpp  mandelbrot.cpp  mandelbrot_set.cpp  misc.cpp  sequence.cpp
src/gui/: CMakeLists.txt
src/gui/app/: app.cpp  notifications.cpp  win_fractal_processing.cpp  window_base.cpp
src/gui/utils/: help_marker.cpp  padding.cpp
tests/: CMakeLists.txt  test_image.cpp  test_mandelbrot.cpp  test_misc.cpp
